	* MEMDISK: default to "safeint".
	* Adopt the moniker "The Syslinux Project", standard proper
	  noun capitalization, to refer to the project as a whole.
	  Thus, reserve the all-caps "SYSLINUX" to refer to the FAT
	  loader.
	* mboot.c32: add "-solaris" option to pass DHCP information to
	  the Solaris kernel; required for automatic Solaris boot
	  without using Solaris' pxeboot program.

Changes in 3.72:
	* Include the pxechain.com module from Jeffery Hutzelman at
	  Carnegie Mellon University.  This allows chaining another
	  PXE boot program while changing the DHCP packet passed to
	  it.
	* Reorganize the Makefile system.
	* Major PCI core cleanups and other source cleanup.
	* gPXE code updated.
	* Try to avoid memory-snooping attacks on passwords.  Note
	  that if someone has root on the box, they generally don't
	  need to compromise the boot loader...
	* ISOLINUX: fix crash when given a zero-length file.
	* sdi.c32: support gzipped SDI images.
	* ISOLINUX: support generating images which can be either
	  a CD-ROM or a hard disk (USB disk, etc.)  See
	  doc/isolinux.txt for more information.
	* Remote gdb support for COM32 modules; patch from Stefan
	  Hajnoczi.
	* Support beeps in F-key help in the simple menu system.
	* Tab display of labels, based on a patch from Sebastian
	  Herbszt.  Can be disabled with the NOCOMPLETE configuration
	  command.
	* "menu default" can now be specified after "menu begin", to
	  indicate that a specific submenu should be the default entry.

Changes in 3.71:
	* Workaround for a VESA BIOS which tries to make DOS system
	  calls(!!)
	* Simple menu: fix navigation around disabled entries
	  (or at least try to...)
	* EXTLINUX: proper error message when confused about mount
	  point.
	* MEMDISK: be smarter about incompletely disabled floppies in
	  the BIOS and about being the only floppy.
	* Optionally allow initrd to be specified on a separate line
	  rather than as part of the "append" line.  This is not